--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -5,6 +5,11 @@ on:
       download-path:
         required: true
         type: string
+    secrets:
+      app_id:
+        required: true
+      private_key:
+        required: true
 jobs:
   coverage:
     timeout-minutes: 5
@@ -12,21 +17,19 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-    - name: Setup
-      run: |
-        set -ex
-        python -m pip install --upgrade 'pip<23' wheel
-        pip install coverage[toml]==6.5.0
-    - name: Download artifacts
-      uses: actions/download-artifact@v3
+    - name: Get Repo Token
+      id: REPO_TOKEN
+      uses: tibdex/github-app-token@v1
       with:
-        path: ${{ inputs.download-path }}
-    - name: Generate coverage report
-      run: |
-        set -ex
-
-        # Flatten the coverage files
-        ls ${{ inputs.download-path }} | while read x; do mv ${{ inputs.download-path }}/$x/.coverage .coverage.$x; done
-
-        python -m coverage combine
-        python -m coverage report
+        app_id: ${{ secrets.app_id }}
+        private_key: ${{ secrets.private_key }}
+    - name: Get composite run steps repository
+      uses: actions/checkout@v3
+      with:
+        repository: mosaicml/testing
+        ref: v0.0.2
+        path: ./testing
+        token: ${{ steps.REPO_TOKEN.outputs.token }}
+    - uses: ./testing/.github/actions/coverage
+      with:
+        download-path: ${{ inputs.download-path }}
