--- a/.github/workflows/pr-cpu.yaml
+++ b/.github/workflows/pr-cpu.yaml
@@ -17,7 +17,7 @@ jobs:
           container: mosaicml/pytorch:2.0.1_cpu-python3.10-ubuntu20.04
           markers: not daily and not remote and not gpu and not vision and not doctest
           pytest_command: coverage run -m pytest
-          composer_package_name: mosaicml
+          composer_package_name: composer
         - name: cpu-3.10-2.1
           container: mosaicml/pytorch:2.1.2_cpu-python3.10-ubuntu20.04
           markers: not daily and not remote and not gpu and not vision and not doctest
