--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -8,6 +8,7 @@ on:
     - main
     - release/**
   workflow_dispatch:
+  pull_request:
 # Cancel old runs when a new commit is pushed to the same branch if not on main or dev
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
