--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,8 @@ reportUnusedCoroutine = "error"
 # Pytest
 [tool.pytest.ini_options]
 # By default, do not run gpu, vision, docs, notebook, or daily tests
-addopts = "--codeblocks --strict-markers -m 'not gpu and not doctest and not daily and not remote'"
+#addopts = "--codeblocks --strict-markers -m 'not gpu and not doctest and not daily and not remote'"
+addopts = "-s"
 
 markers = [
     # Tests that require a world_size of two should be annotated with `@pytest.mark.world_size(2)`.
@@ -99,7 +100,7 @@ markers = [
     "remote",
 ]
 filterwarnings = [
-    "error",  # Mark all warnings as errors
+    #"error",  # Mark all warnings as errors
 
     # Treat the warnings that python usually would ignore as warnings, not errors.
     "default::DeprecationWarning",
@@ -153,7 +154,8 @@ filterwarnings = [
     # Ignore autograd kernel warning inside DeepSpeed
     '''ignore:.*an autograd kernel was not registered to the Autograd key.*:UserWarning''',
     # Ignore save_state_dict / load_state_dict deprecation warnings
-    '''ignore:'.*_state_dict' is deprecated and will be removed in future versions.*:UserWarning'''
+    '''ignore:'.*_state_dict' is deprecated and will be removed in future versions.*:UserWarning''', 
+    '''ignore: '''
 ]
 
 # Coverage
