--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,7 +14,7 @@ name: "CodeQL"
 on:
   push:
     branches: [dev, main]
-  pull_request:
+  pull_request_target:
     # The branches below must be a subset of the branches above
     branches: [dev, main]
   schedule:
