restructure CLI compressor handling. Added more tests

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -124,6 +124,14 @@ RUN apt-get update && \
         autotools-dev \
         automake \
         libtool \
+        # Compressors
+        bzip2 \
+        gzip \
+        lz4 \
+        lzma \
+        lzop \
+        xz-utils \
+        zstd \
         # Development tools
         tmux \
         htop && \
