--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -7,6 +7,7 @@ on:
     - release/**
   pull_request:
   workflow_dispatch:
+  workflow_call:
 # Cancel old runs when a new commit is pushed to the same branch if not on main
 # or dev
 concurrency:
