--- a/.github/workflows/pr-cpu.yaml
+++ b/.github/workflows/pr-cpu.yaml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
 jobs:
   pytest-cpu:
-    uses: mosaicml/ci-testing/.github/workflows/pytest-cpu.yaml@v0.0.4
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -29,16 +29,25 @@ jobs:
           container: mosaicml/pytorch:2.2.1_cpu-python3.11-ubuntu20.04
           markers: not daily and not remote and not gpu and doctest
           pytest_command: coverage run -m pytest tests/test_docs.py
-    name: ${{ matrix.name }}
-    if: github.repository_owner == 'mosaicml'
-    with:
-      composer_package_name: mosaicml
-      container: ${{ matrix.container }}
-      name: ${{ matrix.name }}
-      pip_deps: "[all]"
-      pytest-command: ${{ matrix.pytest_command }}
-      pytest-markers: ${{ matrix.markers }}
-      safe_directory: composer
+    steps:
+      - name: Maximize Build Space on Worker
+        uses: easimon/maximize-build-space@v4
+        with:
+          overprovision-lvm: true
+          remove-dotnet: true
+          remove-android: true
+          remove-haskell: true
+      - uses: mosaicml/ci-testing/.github/workflows/pytest-cpu.yaml@v0.0.4
+        name: ${{ matrix.name }}
+        if: github.repository_owner == 'mosaicml'
+        with:
+          composer_package_name: mosaicml
+          container: ${{ matrix.container }}
+          name: ${{ matrix.name }}
+          pip_deps: "[all]"
+          pytest-command: ${{ matrix.pytest_command }}
+          pytest-markers: ${{ matrix.markers }}
+          safe_directory: composer
   coverage:
     uses: ./.github/workflows/coverage.yaml
     name: Coverage Results
