--- a/.github/workflows/pr-cpu.yaml
+++ b/.github/workflows/pr-cpu.yaml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
 jobs:
   pytest-cpu:
-    uses: mosaicml/ci-testing/.github/workflows/pytest-cpu.yaml@mvpatel2000/remove-failed
+    uses: mosaicml/ci-testing/.github/workflows/pytest-cpu.yaml@v0.0.5
     strategy:
       matrix:
         include:
