--- a/docker/build_matrix.yaml
+++ b/docker/build_matrix.yaml
@@ -236,7 +236,7 @@
 #   TARGET: composer_stage
 #   TORCHVISION_VERSION: 0.18.0
 - AWS_OFI_NCCL_VERSION: ''
-  BASE_IMAGE: ubuntu:22.04
+  BASE_IMAGE: arm64v8/ubuntu:22.04
   COMPOSER_INSTALL_COMMAND: mosaicml[all]==0.22.0
   CUDA_VERSION: ''
   IMAGE_NAME: composer-0-22-0-cpu
