remove +cpu from torch arm install

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -218,10 +218,9 @@ RUN if [ -z "$PYTORCH_NIGHTLY_URL" ] ; then \
                 torch==${PYTORCH_VERSION}+${CUDA_VERSION_TAG} \
                 torchvision==${TORCHVISION_VERSION}+${CUDA_VERSION_TAG} ; \
         else \
-            CUDA_VERSION_TAG=$(python${PYTHON_VERSION} -c "print('cu' + ''.join('${CUDA_VERSION}'.split('.')[:2]) if '${CUDA_VERSION}' else 'cpu')") && \
-            pip${PYTHON_VERSION} install --no-cache-dir --find-links https://download.pytorch.org/whl/cpu/fbgemm_gpu-0.5.0%2Bcpu-cp310-cp310-manylinux2014_aarch64.whl \
-                torch==${PYTORCH_VERSION}+${CUDA_VERSION_TAG} \
-                torchvision==${TORCHVISION_VERSION}+${CUDA_VERSION_TAG} ; \
+            pip${PYTHON_VERSION} install --no-cache-dir --find-links https://download.pytorch.org/whl/cpu/torch_stable.html \
+                torch==${PYTORCH_VERSION} \
+                torchvision==${TORCHVISION_VERSION} ; \
     else \
         pip${PYTHON_VERSION} install --no-cache-dir --pre --index-url ${PYTORCH_NIGHTLY_URL} \
             torch==${PYTORCH_VERSION}.${PYTORCH_NIGHTLY_VERSION} \
