fix base image logic

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,8 +15,8 @@ ARG LINUX_DISTRO='ubuntu'
 ARG LINUX_DISTRO_VERSION='20.04'
 
 # Calculate the base image based on CUDA_VERSION
-ARG BASE_IMAGE=${CUDA_VERSION}:+"nvidia/cuda:${CUDA_VERSION}-cudnn8-devel-${LINUX_DISTRO}${LINUX_DISTRO_VERSION}"
-ARG BASE_IMAGE=${BASE_IMAGE}:-"${LINUX_DISTRO}:${LINUX_DISTRO_VERSION}"
+ARG BASE_IMAGE=${CUDA_VERSION:+nvidia/cuda:${CUDA_VERSION}-cudnn8-devel-${LINUX_DISTRO}${LINUX_DISTRO_VERSION}}
+ARG BASE_IMAGE=${BASE_IMAGE:-${LINUX_DISTRO}:${LINUX_DISTRO_VERSION}}
 # The Python version to install
 ARG PYTHON_VERSION=3.10
 
