--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -68,7 +68,7 @@ ARG COMPOSER_INSTALL_COMMAND='mosaicml[all]'
 
 FROM ${BASE_IMAGE} AS pytorch_stage
 
-WORKDIR /composer_{$TARGETARCH}
+WORKDIR /composer_${TARGETARCH}
 
 ARG DEBIAN_FRONTEND=noninteractive
 
