--- a/.github/workflows/docker-configure-build-push.yaml
+++ b/.github/workflows/docker-configure-build-push.yaml
@@ -36,7 +36,7 @@ on:
         required: true
 jobs:
   configure-build-push:
-    runs-on: mosaic-4wide
+    runs-on: mosaic-8wide
     steps:
 
     - name: Checkout
@@ -81,7 +81,7 @@ jobs:
       with:
         context: ${{ inputs.context }}
         tags: ${{ env.IMAGE_TAG }}
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/arm64
         target: ${{ inputs.target }}
         push: ${{ inputs.push }}
         cache-from: type=registry,ref=${{ env.IMAGE_CACHE }}
