--- a/.github/workflows/docker-configure-build-push.yaml
+++ b/.github/workflows/docker-configure-build-push.yaml
@@ -49,10 +49,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: setup QEMU
+    - name: Setup QEMU
       uses: docker/setup-qemu-action@v2
 
-    - name: setup Docker Buildx
+    - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
 
     - name: Login to DockerHub
